# se-fault-tolerant-template

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/tolerator-inst/: CMakeLists.txt  Tolerator.cpp  Tolerator.h
lib/tolerator-rt/: CMakeLists.txt  runtime.cpp
test/: CMakeLists.txt  doctest.cpp
test/c/: free-global.c  free-local.c  free-middle.c  free-twice.c  free-wild.c  local-arrays.c  read-failure-propagates.c  read-global-byte.c  read-local-after-return.c  read-local-byte-array.c  read-malloc-after-free.c  read-malloc-byte.c  read-malloc-overlap.c  signed-char-division.c  signed-int-division.c  store-global-byte.c  store-local-byte-array.c  store-malloc-byte.c  unsigned-char-division.c
test/unit/: free-global.cpp  free-local.cpp  free-middle.cpp  free-twice.cpp  free-wild.cpp  read-failure-propagates.cpp  read-global-byte.cpp  read-local-after-return.cpp  read-local-byte-array.cpp  read-malloc-after-free.cpp  read-malloc-byte.cpp  read-malloc-overlap.cpp  signed-char-division.cpp  signed-int-division.cpp  store-global-byte.cpp  store-local-byte-array.cpp  store-malloc-byte.cpp  unsigned-char-division.cpp
tools/: CMakeLists.txt
tools/tolerator/: CMakeLists.txt  config.h.cmake  main.cpp
